# nevron

./: .dockerignore  .env.dev  .env.example  .gitignore  404.html  CLAUDE.md  Dockerfile  Makefile  Pipfile  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: base.yml  benchmarks.yml  deploy-docs.yml  docker-release.yml  docker.yml  github-pages.yml  main.yml  release-please.yml
about/: index.html
agent/discord/: index.html
agent/execution/: index.html
agent/feedback/: index.html
agent/github/: index.html
agent/google_drive/: index.html
agent/lens_protocol/: index.html
agent/llama/: index.html
agent/llm/: index.html
agent/memory/: index.html
agent/overview/: index.html
agent/planning/: index.html
agent/shopify/: index.html
agent/slack/: index.html
agent/spotify/: index.html
agent/tavily/: index.html
agent/tools/: index.html
agent/whatsapp/: index.html
agent/workflows/: index.html
agent/youtube/: index.html
benchmarks/: .gitkeep
configuration/: index.html
dashboard/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
dashboard/src/: app.css  app.html
deployment/: index.html
dev/: 404.html  index.html  sitemap.xml
dev/about/: index.html
dev/configuration/: index.html
dev/deployment/: index.html
dev/quickstart/: index.html
dev/search/: search_index.json
development/contributing/: index.html
development/environment/: index.html
development/setup/: index.html
development/workflow/: index.html
docker/: Dockerfile.api  Dockerfile.dashboard
docs/: about.md  architecture.md  configuration.md  dashboard.md  deployment.md  index.md  quickstart.md
docs/agent/: execution.md  feedback.md  llm.md  overview.md  planning.md
docs/development/: contributing.md  environment.md  setup.md  workflow.md
quickstart/: index.html
search/: search_index.json
src/: agent.py  agent_runner.py  debug.py  debug.py.txt  main.py  utils.py
src/api/: __init__.py  config.py  dependencies.py  main.py
src/context/: context.py
src/core/: agent_commands.py  agent_state.py  config.py  cycle_logger.py  defs.py  exceptions.py  ui_config.py
src/execution/: __init__.py  base.py  development_executors.py  ecommerce_executors.py  execution.py  execution_module.py  media_executors.py  research_executors.py  social_media_executors.py  workflows_executors.py
src/feedback/: __init__.py  feedback_module.py
src/learning/: __init__.py  adapter.py  critic.py  learning_module.py  lessons.py  tracker.py
src/llm/: embeddings.py  llm.py
src/mcp/: __init__.py  config.py  manager.py  types.py
src/memory/: __init__.py  consolidation.py  episodic.py  memory_module.py  procedural.py  semantic.py  tri_memory.py
src/metacognition/: __init__.py  confidence_estimator.py  failure_predictor.py  human_handoff.py  intervention.py  loop_detector.py  monitor.py
src/planning/: __init__.py  goal.py  hierarchical_planner.py  plan_tree.py  planning.py  planning_module.py  replanning.py
src/runtime/: __init__.py  background.py  event.py  listener.py  processor.py  queue.py  runtime.py  scheduler.py
src/tools/: __init__.py  gather.py  get_signal.py  github.py  google_drive.py  tg.py  (+8 more)
stable/: 404.html  index.html  sitemap.xml
tests/: test_agent.py  test_main.py  test_utils.py
(+211 files in other folders)
